Accordions: Fix regression in accordion label spacing

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -81,6 +81,10 @@
 		margin-bottom: 2rem;
 	}
 
+	.accordion-item__title-text {
+		margin-bottom: 0;
+	}
+
 	p + p {
 		margin-top: 0;
 	}
